# mpp

./: README.md  pyproject.toml  results.ipynb
models/: gb_model_pic50.pkl  knn_model_logP.pkl  knn_model_pic50.pkl  nn_model_logP.pth  nn_model_pic50.pth  rf_model_logP.pkl  rf_model_pic50.pkl
mpp/: main.py
mpp/models/: gradient_boosting.py  knn.py  neural_network.py  random_forest.py
mpp/tuning/: tune.py
mpp/utils/: data_processing.py  model_utils.py  visualization.py
params/: gb_best_params_logP.pkl  gb_best_params_pic50.pkl  knn_best_params_pic50.pkl  nn_best_params_logP.pkl  nn_best_params_pic50.pkl  rf_best_params_logP.pkl  rf_best_params_pic50.pkl
