[tool.poetry]
name = "mpp"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = "^2.3.0"
rdkit = "^2023.9.6"
xgboost = "^2.0.3"
scikit-learn = "^1.5.0"
tqdm = "^4.66.4"
optuna = "^3.6.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipywidgets = "^8.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
